About me section implemented.

--- a/index.html
+++ b/index.html
@@ -42,8 +42,11 @@
   <main class="page-wrapper">
     <!-- about me -->
     <section class="page-section" id="about">
-      <div class="about-me"><h2>About Me</h2></div>
-      <div class="about-me-content"></div> 
+      <div class="about-me"><h2>About <br>Me</h2></div>
+      <div class="about-me-content">
+        <p>Duis eget viverra tellus. Cras facilisis sit 
+         justo tellus ullamcorper risus, eget finibus tellus urna quis ipsum. Vestibulum a turpis ut libero dignissim pharetra. Nullam blandit elit neque, sit amet gravida eros elementum in. Aliquam bibendum neque non nulla vulputate, eu egestas arcu volutpat. Sed semper, augue dignissim dignissim placerat, urna lacus pharetra arcu, ut tempor leo mi id urna. Nullam lacinia commodo ante, eu euismod justo hendrerit nec. Integer aliquam quam turpis, quis ullamcorper magna posuere sit amet.</p>
+      </div> 
     </section>
 
     <!-- portfolio container -->
