Tip-calculator javascript project added in my works.

--- a/index.html
+++ b/index.html
@@ -51,13 +51,21 @@
 
     <!-- portfolio container -->
     <section class="page-section" id="work">
-      <h2>Work</h2>
+      <div class="my-work-title about-me">
+        <h2>My <br/> Work</h2>
+      </div>
+      <div class="about-me-content my-works">
+        <div class="tip-cal">
+          <a href="https://puspitagoswami.github.io/TipCalculator/"><img src="./assets/images/tip-cal.jpg" alt="brand-awareness" /></a>
+          </div>
+      </div>
+      
     </section>
 
     <!-- contact -->
-    <section class="page-section contact" id="contact">
+    <!-- <section class="page-section contact" id="contact">
       <h2>Contact Me</h2>
-    </section>
+    </section> -->
   </main>
 </body>
 
