changes in my works

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <nav>
       <ul>
           <li>
-              <a href="#about-me">About Me</a>
+              <a href="#about">About Me</a>
           </li>
           <li>
               <a href="#contact-me">Contact Me</a>
           </li>
           <li>
-              <a href="#resume">Resume</a>
+              <a href="https://docs.google.com/document/d/16zs2QKkHfGodosfre_rPDImaJFO_vDlUe4URJkIPoeo/edit?usp=sharing">Resume</a>
           </li>
       </ul>
   </nav>
@@ -44,8 +44,8 @@
     <section class="page-section" id="about">
       <div class="about-me"><h2>About <br>Me</h2></div>
       <div class="about-me-content">
-        <p>Duis eget viverra tellus. Cras facilisis sit 
-         justo tellus ullamcorper risus, eget finibus tellus urna quis ipsum. Vestibulum a turpis ut libero dignissim pharetra. Nullam blandit elit neque, sit amet gravida eros elementum in. Aliquam bibendum neque non nulla vulputate, eu egestas arcu volutpat. Sed semper, augue dignissim dignissim placerat, urna lacus pharetra arcu, ut tempor leo mi id urna. Nullam lacinia commodo ante, eu euismod justo hendrerit nec. Integer aliquam quam turpis, quis ullamcorper magna posuere sit amet.</p>
+        <p>Hello, my name is Puspita Goswami and I am a front-end developer with 2 years of experience in creating beautiful and functional websites. I have a passion for creating user-friendly designs and am skilled in using technologies such as HTML, CSS, and JavaScript. I have worked on a variety of projects, from small personal websites to large-scale enterprise applications.</p>
+        <p>I am well-versed in responsive design and am able to create websites that look great on any device. I am also skilled in using front-end frameworks such as Bootstrap and Foundation, as well as JavaScript libraries such as jQuery and React. I am always looking to learn new technologies and stay current with the latest web development trends.</p>
       </div> 
     </section>
 
@@ -57,6 +57,17 @@
       <div class="about-me-content my-works">
         <div class="tip-cal">
           <a href="https://puspitagoswami.github.io/TipCalculator/"><img src="./assets/images/tip-cal.jpg" alt="brand-awareness" /></a>
+          <div class="image-title">JavaScript Mini Project</div>
+          </div>
+          <div class="projects-2">
+            <div class="js-project">
+              <a href="https://puspitagoswami.github.io/Color_Swap/"><img src="./assets/images/color-swap.JPG" alt="brand-awareness" /></a>
+              <div class="image-title">JavaScript Mini Project</div>
+            </div>
+            <div class="js-project">
+              <a href="https://puspitagoswami.github.io/CountDown/"><img src="./assets/images/count-down.JPG" alt="brand-awareness" /></a>
+              <div class="image-title">JavaScript Mini Project</div>
+            </div>
           </div>
       </div>
       
