responsive code added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div class="content">
   <section class="hero-banner">
        <div class="hero">
-        <img class="puspi" src="./assets/images/Puspi.JPG" alt="">
+        <img class="puspi" src="./assets/images/Puspi.JPG" alt="my image">
       <h2>Frontend Developer</h2>
       <img src="./assets/images/bg-1.jpg" alt="brand-awareness" />
     </div>
