--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
       <div class="about-me-content my-works">
         <div class="tip-cal">
-          <a href="https://puspitagoswami.github.io/TipCalculator/"><img src="./assets/images/tip-cal.jpg" alt="brand-awareness" /></a>
+          <a href="https://puspitagoswami.github.io/TipCalculator/"><img src="./assets/images/tip-cal.JPG" alt="brand-awareness" /></a>
           <div class="image-title">JavaScript Mini Project</div>
           </div>
           <div class="projects-2">
