--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
           <div class="image-title">JavaScript Mini Project</div>
           </div>
           <div class="projects-2">
-            <div class="js-project">
+            <div class="js-project" style="grid-column: 1 / 2;">
               <a href="https://puspitagoswami.github.io/Color_Swap/"><img src="./assets/images/color-swap.JPG" alt="brand-awareness" /></a>
               <div class="image-title">JavaScript Mini Project</div>
             </div>
-            <div class="js-project">
+            <div class="js-project" style="grid-column: 2 / 3;">
               <a href="https://puspitagoswami.github.io/CountDown/"><img src="./assets/images/count-down.JPG" alt="brand-awareness" /></a>
               <div class="image-title">JavaScript Mini Project</div>
             </div>
